--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,6 @@ hashids==1.1.0
 imageio==1.5
 itsdangerous==0.24
 kombu==3.0.35
-moviepy==0.2.2.11
 numpy==1.11.1
 pytz==2016.6.1
 requests==2.11.1
@@ -23,3 +22,5 @@ tqdm==4.8.4
 uWSGI==2.0.13.1
 wsgiref==0.1.2
 youtube-dl==2016.8.22
+# moviepy==0.2.2.11
+git+https://github.com/Laurian/moviepy@popcorn-exporter
